--- a/03_ThirdClass/Plain_HTML_Server/public/visitors/visitors.html
+++ b/03_ThirdClass/Plain_HTML_Server/public/visitors/visitors.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./tanks.css">
-    <title>TANKS</title>
+    <title>Visitors</title>
 </head>
 <body>
-
-    <div id="tanks-wrapper">
-        
+    <div id="visitor-count">
     </div>
-    
-    <script src="./tanks.js"></script>
+
+    <button onclick="updateVisitorCount()">Say hi!</button>
+
+    <script src="./visitors.js"></script>
 </body>
 </html>
