--- a/03_ThirdClass/Plain_HTML_Server/public/museumGuards/museumGuards.html
+++ b/03_ThirdClass/Plain_HTML_Server/public/museumGuards/museumGuards.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./tanks.css">
-    <title>TANKS</title>
+    <title>Museum Guards</title>
 </head>
 <body>
-
-    <div id="tanks-wrapper">
-        
-    </div>
-    
-    <script src="./tanks.js"></script>
+    <!--
+    <script src="./barracks.js"></script>
+    <script src="./guards.js"></script>
+    -->
+    <script src="./guards.js" type="module"></script>
 </body>
 </html>
