--- a/04_FourthClass/Upper/public/pages/frontpage/frontpage.html
+++ b/04_FourthClass/Upper/public/pages/frontpage/frontpage.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./tanks.css">
-    <title>TANKS</title>
+    <title>Upper</title>
 </head>
 <body>
 
-    <div id="tanks-wrapper">
-        
-    </div>
+    <h1>Motivational App</h1>
     
-    <script src="./tanks.js"></script>
 </body>
 </html>
