styling of sign up page

--- a/Mandatory01/public/pages/login/login.html
+++ b/Mandatory01/public/pages/login/login.html
@@ -13,7 +13,7 @@
     <div class="container">
         <form id="login-form">
             <div class="container mp-5" id="login-container">
-                <h1> Login </h1>
+                <h1 style="font-weight: bold;"> Login </h1>
                 <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" placeholder="Username" name="username">
@@ -23,7 +23,7 @@
                 <input type="password" class="form-control" id="password" placeholder="Password" name="password">
             </div>
             <div class="mb-3" id="login-button-div">
-                <button type="button" class="btn btn-outline-primary" id="login-button">Login</button>
+                <button type="button" class="btn btn-outline-secondary" id="login-button">Login</button>
             </div>
 
                 <p>Don't have a User? Sign-up <a href="/sign-up">here!</a></p>
