--- a/Mandatory01/public/pages/login/login.html
+++ b/Mandatory01/public/pages/login/login.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/pages/login/login.css">
-    <title>Login</title>
-</head>
-<body>
     <div class="container">
-        <form id="login-form">
-            <div class="container mp-5" id="login-container">
+        <form id="sign-up-login-form">
+            <div class="container mp-5" id="sign-up-login-container">
                 <h1 style="font-weight: bold;"> Login </h1>
                 <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
@@ -22,18 +10,11 @@
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" placeholder="Password" name="password">
             </div>
-            <div class="mb-3" id="login-button-div">
-                <button type="button" class="btn btn-outline-secondary" id="login-button">Login</button>
+            <div class="mb-3" id="sign-up-login-button-div">
+                <button type="button" class="btn btn-outline-secondary" id="sign-up-login-button">Login</button>
             </div>
 
                 <p>Don't have a User? Sign-up <a href="/sign-up">here!</a></p>
             </div>
         </form>
-    </div> 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="/pages/login/login.js"></script>
-    
-</body>
-</html>
+    </div>
