--- a/Mandatory01/public/pages/sign-up/sign-up.html
+++ b/Mandatory01/public/pages/sign-up/sign-up.html
@@ -1,20 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/pages/sign-up/sign-up.css">
-    <title>Sign Up</title>
-</head>
-<body>
     <div class="container">
-        <form id="sign-up-form">
-            <div class="container mp-5" id="sign-up-container">
-                <h1> Sign Up</h1>
+        <form id="sign-up-login-form">
+            <div class="container mp-5" id="sign-up-login-container">
+                <h1 style="font-weight: bold;"> Sign Up</h1>
                 <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" placeholder="Username" name="username">
@@ -23,18 +10,11 @@
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" placeholder="Password" name="password">
             </div>
-            <div class="mb-3" id="sign-up-button-div">
-                <button type="button" class="btn btn-outline-primary" id="sign-up-button">Sign Up!</button>
+            <div class="mb-3" id="sign-up-login-button-div">
+                <button type="button" class="btn btn-outline-secondary" id="sign-up-login-button">Sign Up!</button>
             </div>
 
                 <p>Already have a User? Login <a href="/login">here!</a> </p>
             </div>
         </form>
     </div>  
-    
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="/pages/sign-up/sign-up.js"></script>
-</body>
-</html>
