--- a/Mandatory01/public/pages/documentation/index/index.html
+++ b/Mandatory01/public/pages/documentation/index/index.html
@@ -1,4 +1,4 @@
-    <p>Index:</p>
-    <p>Whatever goes here.</p>
+    <h2>NODE-LEDGE: A Node.JS documentation page.</h2>
+    <h4>Mandatory 01 by Nicolas Javier Jan</h4>
 </div>
 
