finished mandatory 01: added some minor improvement on class six

--- a/Mandatory01/public/pages/documentation/sixth-class/sixth-class.html
+++ b/Mandatory01/public/pages/documentation/sixth-class/sixth-class.html
@@ -8,6 +8,8 @@
       </div>
       <p>Server Side Redirect happens when an HTTP request to a web server is answered with a server status code, which indicates that the requested document has moved to another URL. The client will then request the destination URL and the user gets forwarded.</p>
       <h5>Client Side Fetch vs Fetch in the FrontEnd</h5>
-      <p>????????</p>
+      <p>Client side fetching and front-end fetching are two related but distinct concepts in web development.</p>
+      <p>Front-end fetching encompasses all the activities related to retrieving data or resources on the client side, including Client Side Fetching, server side rendering, static site generation and client side caching.</p>
+      <p>Client-side fetching refers to the process of fetching data or resources from a server using JavaScript on the client side (like the browser) instead of relying on server-side code to generate the HTML page. Generally, client-side fetching uses the Fetch API to make requests to the server for data.</p>
       <h5>Semantic HTML</h5>
       <p>Semantic Elements clearly describe the meaning to both browser and developer: figure, footer, header, main, section, summary, form, etc.</p>
