--- a/04_FourthClass/Upper/public/pages/IRLQuests/IRLQuests.html
+++ b/04_FourthClass/Upper/public/pages/IRLQuests/IRLQuests.html
@@ -18,6 +18,19 @@
     <main>
         <h1>IRL Quests</h1>
 
+        <select name="activities" id="activities">
+            <option value="educational">Educational</option>
+            <option value="recreational">Recreational</option>
+            <option value="social">Social</option>
+            <option value="diy">DIY</option>
+            <option value="charity">Charity</option>
+            <option value="cooking">Cooking</option>
+            <option value="relaxation">Relaxation</option>
+            <option value="music">Music</option>
+            <option value="busy-work">Busy-Work</option>
+        </select>
+        <button id="new-quest">Get New Quest</button>
+
         <h2>Your next quest is to...</h2>
         <h3 id="quest"></h3>
     </main>
